tests/chapter_16/valid/strings_as_lvalues/empty_string.c
int main(void)
{
    signed char *empty = (signed char *)"";
    return empty[0];
}