tests/chapter_16/invalid_types/initializer_too_long.c
int main(void)
{
    char too_long[3] = "abcd";
    return 0;
}